# Qt-QML-Sample

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
app/: Settings.cpp  Settings.h  ThemeManager.cpp  ThemeManager.h
ui/components/: ColorPicker.qml  MyButton.qml  MyInput.qml  qmldir
ui/view/: Main.qml  Settings.qml  qmldir
